--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,8 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body>
-    <div id="root"></div>
+    <div  id="root"></div>
   </body>
 </html>
